feat: udistrital/sga_documentacion#22 Estandar de respuesta y errores en tiempo de ejecucion.
