# swagger/swagger.yml
@@ -11,10 +11,10 @@ info:
     url: http://www.apache.org/licenses/LICENSE-2.0.html
 basePath: /v1
 paths:
-  /actividad_calendario/:
+  /actividad-calendario/:
     post:
       tags:
-      - actividad_calendario
+      - actividad-calendario
       description: Agregar actividad calendario, tipo_publico y tabla de rompimiento calendario_evento_tipo_publico
       operationId: ActividadCalendarioController.PostActividadCalendario
       parameters:
@@ -29,10 +29,10 @@ paths:
           description: '{}'
         "403":
           description: body is empty
-  /actividad_calendario/update/{id}:
+  /actividad-calendario/update/{id}:
     put:
       tags:
-      - actividad_calendario
+      - actividad-calendario
       description: Actualiza tabla de rompimiento calendario_evento_tipo_publico segun los responsables de una Actividad
       operationId: ActividadCalendarioController.UpdateActividadResponsables
       parameters:
@@ -47,10 +47,10 @@ paths:
           description: '{}'
         "403":
           description: body is empty
-  /calendario_academico/:
+  /calendario-academico/:
     get:
       tags:
-      - calendario_academico
+      - calendario-academico
       description: get todos los calendarios académicos junto a sus periodos correspondientes
       operationId: ConsultaCalendarioAcademicoController.GetAll
       parameters:
@@ -85,10 +85,10 @@ paths:
             $ref: '#/definitions/models.ConsultaCalendarioAcademico'
         "404":
           description: ""
-  /calendario_academico/{id}:
+  /calendario-academico/{id}:
     get:
       tags:
-      - calendario_academico
+      - calendario-academico
       description: get obtener calendario académico por id
       operationId: ConsultaCalendarioAcademicoController.GetOnePorId
       parameters:
@@ -102,28 +102,10 @@ paths:
           description: '{}'
         "403":
           description: :id is empty
-  /calendario_academico/calendario_padre:
-    post:
-      tags:
-      - calendario_academico
-      description: Proyecto obtener el Id de calendario padre, crear el nuevo calendario (hijo) e inactivar el calendario padre
-      operationId: ConsultaCalendarioAcademicoController.PostCalendarioHijo
-      parameters:
-      - in: body
-        name: body
-        description: body crear calendario hijo content
-        required: true
-        schema:
-          $ref: '#/definitions/{}'
-      responses:
-        "200":
-          description: '{}'
-        "403":
-          description: :body is empty
-  /calendario_academico/inhabilitar_calendario/{id}:
+  /calendario-academico/inhabilitar_calendario/{id}:
     put:
       tags:
-      - calendario_academico
+      - calendario-academico
       description: Inhabilitar Calendario
       operationId: ConsultaCalendarioAcademicoController.PutInhabilitarCalendario
       parameters:
@@ -143,10 +125,28 @@ paths:
           description: '{}'
         "403":
           description: :id is empty
-  /calendario_academico/v2/{id}:
+  /calendario-academico/padre:
+    post:
+      tags:
+      - calendario-academico
+      description: Proyecto obtener el Id de calendario padre, crear el nuevo calendario (hijo) e inactivar el calendario padre
+      operationId: ConsultaCalendarioAcademicoController.PostCalendarioHijo
+      parameters:
+      - in: body
+        name: body
+        description: body crear calendario hijo content
+        required: true
+        schema:
+          $ref: '#/definitions/{}'
+      responses:
+        "200":
+          description: '{}'
+        "403":
+          description: :body is empty
+  /calendario-academico/v2/{id}:
     get:
       tags:
-      - calendario_academico
+      - calendario-academico
       description: get obtener información calendario académico por id
       operationId: ConsultaCalendarioAcademicoController.GetCalendarInfo
       parameters:
@@ -160,10 +160,10 @@ paths:
           description: '{}'
         "404":
           description: not found resource
-  /calendario_proyecto/{id}:
+  /calendario-proyecto/{id}:
     get:
       tags:
-      - calendario_proyecto
+      - calendario-proyecto
       description: get ConsultaCalendarioAcademico by id
       operationId: ConsultaCalendarioProyectoController.GetCalendarByProjectId
       parameters:
@@ -177,10 +177,10 @@ paths:
           description: ""
         "403":
           description: :id is empty
-  /calendario_proyecto/nivel/{idNiv}/periodo/{idPer}:
+  /calendario-proyecto/nivel/{idNiv}/periodo/{idPer}:
     get:
       tags:
-      - calendario_proyecto
+      - calendario-proyecto
       description: get ConsultaCalendarioAcademico & id y Project By Id
       operationId: ConsultaCalendarioProyectoController.GetCalendarProject
       parameters:
@@ -201,10 +201,10 @@ paths:
           description: ""
         "403":
           description: :id is empty
-  /clonar_calendario/:
+  /clonar-calendario/:
     post:
       tags:
-      - clonar_calendario
+      - clonar-calendario
       description: Clona calendario, crea tipo_evento si lo tiene, crea calendario_evento si tiene, crea calendario_evento_tipo_publico si tiene, crea tipo_publico si lo tiene
       operationId: ClonarCalendarioController.PostCalendario
       parameters:
@@ -219,10 +219,10 @@ paths:
           description: '{int}'
         "400":
           description: the request contains incorrect syntax
-  /clonar_calendario/calendario_extension:
+  /clonar-calendario/extension:
     post:
       tags:
-      - clonar_calendario
+      - clonar-calendario
       description: Clona calendario para extension, crea tipo_evento si lo tiene, crea calendario_evento si tiene, crea calendario_evento_tipo_publico si tiene, crea tipo_publico si lo tiene
       operationId: ClonarCalendarioController.PostCalendarioExtension
       parameters:
@@ -237,10 +237,10 @@ paths:
           description: '{}'
         "400":
           description: the request contains incorrect syntax
-  /clonar_calendario/calendario_padre:
+  /clonar-calendario/padre:
     post:
       tags:
-      - clonar_calendario
+      - clonar-calendario
       description: Clona calendario padre, crea tipo_evento si lo tiene, crea calendario_evento si tiene, crea calendario_evento_tipo_publico si tiene, crea tipo_publico si lo tiene
       operationId: ClonarCalendarioController.PostCalendarioPadre
       parameters:
@@ -337,6 +337,6 @@ definitions:
     title: ConsultaCalendarioAcademico
     type: object
 tags:
-- name: calendario_academico
+- name: calendario-academico
   description: |
     ConsultaCalendarioAcademicoController operations for Consulta_calendario_academico
